# YinPad

./: CMakeLists.txt  README.md  YinPad.sln
.github/workflows/: build.yml
YinPad/: Options.h  Save.txt  YinPad.cpp  YinPad.h  YinPad.vcxproj  YinPad.vcxproj.filters  main.cpp
YinPad/Shaders/: Background.frag
